# gitai

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
gitai/: __init__.py  cli.py  commit.py  config.py  constants.py  hook.py
tests/: test_diff.py  test_hook_integration.py
